# FlutterDemo

./: .gitignore
AppWithJni/: build.gradle  settings.gradle
AppWithJni/app/: build.gradle
AppWithJni/gradle/wrapper/: gradle-wrapper.properties
FeiPhoneInfo/: Podfile
FeiPhoneInfo/FeiPhoneInfo/: AboutViewController.m  BaseViewController.m  CameraViewController.m  EGORefreshTableHeaderView.h  EGORefreshTableHeaderView.m  FeiPhoneInfo-Info.plist  FeiPhoneInfoAppDelegate.h  FeiPhoneInfoAppDelegate.m  GeneralViewController.m  HardwareViewController.m  NetworkViewController.m  ProfilesViewController.m  SwitchViewController.h  SwitchViewController.m  TaskViewController.mm  TestEntryViewController.h  TestEntryViewController.m  main.m
FeiPhoneInfo/FeiPhoneInfo.xcodeproj/: project.pbxproj
FeiPhoneInfo/FeiPhoneInfo.xcworkspace/: contents.xcworkspacedata
FeiPhoneInfo/FeiPhoneInfo/Flutter/: DemoBoostDelegate.h  DemoBoostDelegate.m  DemoFlutterBoostDelegate.h  DemoFlutterBoostDelegate.m
FeiPhoneInfo/FeiPhoneInfo/en.lproj/: InfoPlist.strings
FeiPhoneInfo/UIDevice+/: Reachability.m  UIDevice-Capabilities.h  UIDevice-Capabilities.m  UIDevice-IOKitExtensions.m  UIDevice-Reachability.m
KaiAndroid/: build.gradle  flutter.gradle  gradle.properties  settings.gradle
KaiAndroid/app/: build.gradle
KaiAndroid/app/docs/: android.keystore
KaiAndroid/app/src/main/cpp/: CMakeLists.txt  NdkJniTest.cpp
KaiAndroid/app/src/main/cpp/CppPrimerPlus/: baseclass.cpp  baseclass.h  baseclass_impl.h  exceptiondemo.cpp  exceptiondemo.h  main.cpp  main.h  rttidemo.cpp  rttidemo.h  stltest.cpp  stltest.h  templateclass.hpp
KaiAndroid/app/src/main/cpp/ModernCpp/: CMakeLists.txt  FileOperate.cpp  FileOperate.h  ModelCxx.cpp  ModelCxx.h  Shape.cpp  Shape.h  Temple.h  Temple.hpp  Thread.cpp  Thread.h  leftright.cpp  leftright.h  modernMain.cpp  modernMain.h  pointers.cpp  pointers.h  regextest.cpp  regextest.h  stringformat.cpp  stringformat.h  teststd17.cpp  teststd17.h  usability.cpp  usability.h  virtual_derived.h
KaiAndroid/gradle/wrapper/: gradle-wrapper.properties
KaiTestCpp/KaiTestCpp/: KaiTest.cpp  KaiTest.hpp  main.mm
KaiTestCpp/KaiTestCpp.xcodeproj/: project.pbxproj
kai_flutter_demo_module/: .metadata  README.md  pubspec.yaml
kai_flutter_demo_module/assets/txt/: scaffold_listview_live_template  scaffold_live_template
kai_flutter_demo_module/lib/: change_notifier_provider.dart  consumer.dart  demo_list_custom_border_page.dart  dialog_page.dart  kai_drawer.dart  main.dart  page_home.dart  test_dart_syntax.dart  test_dart_syntax.g.dart  test_page_1.dart  test_page_2.dart  test_page_3.dart  test_page_4.dart  test_page_5.dart  test_page_6.dart  test_page_7.dart  test_page_8.dart  test_page_9.dart
kai_flutter_demo_module/test/: widget_test.dart
(+58 files in other folders)
